k8s/ingress-dev/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-homebase-ingress-service-dev
  annotations:
    kubernetes.io/ingress.class: 'public'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: homebase-backend-cluster-ip-frontend
                port:
                  number: 80
